@@ -4,6 +4,7 @@ AZUREUS CHANGELOG
 2007.09.xx | v3.0.2.3_CVS
 
 FEATURE: UI   | Added "handshake reserved bytes" column in peer view [amc1]
+FEATURE: UI   | Added "Open Transfer Bar on start" option [amc1]
 
 CHANGE: Core  | Speedup hash-checking by ~30% / less CPU usage [The 8472]
 CHANGE: UI    | Provide both "per-torrent" and "across-torrents" speed menu options [amc1]
